# Compiler

./: .gitignore  CMakeLists.txt  L.pro  README.txt
doc/standard_library_design/: strings.txt
doc/syntax_examples/: hello_world.ly  traits.ly
src/: CMakeLists.txt  compilation_unit.cpp  compilation_unit.h
src/common/: CMakeLists.txt  code.cpp  code.h  code_point.cpp  code_point.h  error_codes.h  error_handler.cpp  error_handler.h  error_producer.cpp  error_producer.h  operators.h  string_view.h  token.cpp  token.h
src/compiler/: CMakeLists.txt  main.cpp
src/compiler_lib/: CMakeLists.txt  compilation_unit.cpp  compilation_unit.h
src/compiler_lib/ast/: ast.cpp  ast.h  ast_allocator.h
src/compiler_lib/common/: code.cpp  code.h  object_construct_builder.h  operators.h  pool_allocator.h  token.cpp  token.h
src/compiler_lib/lexer/: lexer.cpp  lexer.h  lexer_error_producer.cpp  lexer_error_producer.h  lexer_settings.h
src/compiler_lib/parse_tree/: parse_tree.cpp  parse_tree.h  parse_tree_allocator.h  parse_tree_visitor.cpp  parse_tree_visitor.h
src/compiler_lib/parser/: ast.h  parser.cpp  parser.h  parser_error_producer.cpp  parser_error_producer.h
src/parser/: lexer.cpp  lexer.h  lexer_error_producer.cpp  lexer_error_producer.h  lexer_settings.h  parser.cpp  parser.h
src/test_support/: CMakeLists.txt  lexer_tester.cpp  lexer_tester.h  token_list_matcher.cpp  token_list_matcher.h
test/: CMakeLists.txt  lexer.cpp
test/lexer_test_data/: basic.l  basic.l.ref  basic.ly  basic.ly.ref  string_inline_expression.ly  string_inline_expression.ly.ref
